# zktransverify

./: .gitignore  .gitmodules  README.md  TestSetup.md
src/: CMakeLists.txt  libsnarkwrap.tgz  util.hpp  videocoin.cpp
src/contract/: proof.json  proving.key  truffle-config.js  verify.py
src/contract/contracts/: Verify.sol  ZkTransVerify.sol  verifier.sol
src/contract/migrations/: 2_deploy_verifier.js  2_deploy_verify.js  3_deploy_verify.js
src/extenlib/: test_zk_verify.py
src/extenlib/libsnarkwrap/depends/: CMakeLists.txt
src/extenlib/libsnarkwrap/depends/libsnark/: CMakeLists.txt
src/extenlib/libsnarkwrap/depends/libsnark/depends/libfqfft/: CMakeLists.txt
src/extenlib/libsnarkwrap/depends/libzokrates/: CMakeLists.txt  Makefile
src/extenlib/libsnarkwrap/src/: CMakeLists.txt  videocoin.cpp
src/extractmb/: Makefile  extractmb.c  h264_nal.c  h264_slice_data.c  h264_stream.c  h264_stream.h
src/ffmpeg/: .cproject  modifications.MD
src/ffmpeg/extools/: Makefile  decode-h264-mb.c  decode-h264-mb.h  genproof.c  genwitness.c  sha256-util.c  sha256-util.h  tiny_ssim.c  tiny_ssim.h
src/ffmpeg/libavcodec/: Makefile  allcodecs.c  avcodec.h  h264mb_cabac.c  h264mb_cavlc.c  h264mb_slice.c  h264mbdec.c  h264mbdec.h
src/pequin/compiler/cstdinc/: fix_t.h
src/pequin/compiler/frontend/src/backup/: C.flex.old  C.grammar.old
src/pequin/pepper/: Makefile  copy_to_vid.py
src/pequin/pepper/apps/: h264_macroblock_chroma_pred8x8.h  h264_macroblock_decoder.c  h264_macroblock_decoder.h  h264_macroblock_defs.h  h264_macroblock_idct.h  h264_macroblock_intra16x16_decoder.c  h264_macroblock_intra16x16_decoder.h  h264_macroblock_intra4x4_decoder.c  h264_macroblock_intra4x4_decoder.h  h264_macroblock_luma_pred.h  h264_macroblock_prediction.h  h264_mb_decode.c  h264_prover.c  h264_prover_2.c  h264_ssim.c  h264_ssim16.c  macroblock_decode.c  sha256.c  sha256_macroblock.c  ssim.c  x264_ssim.c  x264_ssim_16x16.c  x264_ssim_32x32.c  x264_ssim_64x64.c
src/pequin/pepper/include/: fix_t.cpp  fix_t.h
src/pequin/pepper/input_generation/: ssim_v_inp_gen.h  x264_ssim_16x16_v_inp_gen.h  x264_ssim_32x32_v_inp_gen.h  x264_ssim_64x64_v_inp_gen.h  x264_ssim_v_inp_gen.h
src/videocoin_proof_keygen/: .gitignore  CMakeLists.txt  install_debian_ubuntu.sh  main.cpp
src/videocoin_proof_keygen/apps/ssim/: matrix_a
src/videocoin_prooving_system/: .gitignore  CMakeLists.txt
src/videocoin_prooving_system/common/: defs.h  utility.cpp  utility.h  waksman_router.h
src/videocoin_prooving_system/key_generator/: key_generator.cpp  main.cpp
src/videocoin_prooving_system/prover/: computation_prover.cpp  computation_prover.h  prover.cpp  prover.h
src/videocoin_prooving_system/prover_example/: example.cpp
src/videocoin_prooving_system/storage/: exo.h
src/videocoin_prooving_system/verifier/: main.cpp  verifier.cpp
src/videocoin_proving_system/: .gitignore  CMakeLists.txt  README.md  apps.part03.rar  apps.part2.rar  apps.tar.xz  install_debian_ubuntu.sh
src/videocoin_proving_system/apps/mb16x16/: params
src/videocoin_proving_system/apps/ssim/: matrix_a  matrix_c  params  pws
src/videocoin_proving_system/apps/ssim16x16/: matrix_c  params
src/videocoin_proving_system/apps/ssim32x32/: params  pws
src/videocoin_proving_system/common/: defs.h  measurement.cpp  measurement.h  utility.cpp  utility.h  version.in.h  waksman_router.cpp  waksman_router.h
src/videocoin_proving_system/docs/: ssim_integration.md
src/videocoin_proving_system/extools/: decode-h264-mb.cpp  decode-h264-mb.h  genproof.cpp  genwitness.cpp  h264_ssim.cpp  h264_ssim.h  sha256-circuit.cpp  sha256-circuit.h  sha256-util.cpp  sha256-util.h  temp-h264-mb-decoder.cpp  temp-h264-mb-decoder.h  verifyproof.cpp
src/videocoin_proving_system/key_generator/: main.cpp
src/videocoin_proving_system/prover/: computation_prover.cpp  computation_prover.h  prover.cpp  prover.h
src/videocoin_proving_system/prover_example/: example.cpp  fix_t.cpp  fix_t.h  h264_ssim16x16_from_prover.cpp  h264_ssim16x16_from_prover.h  h264_ssim32x32_from_prover.cpp  h264_ssim32x32_from_prover.h  h264_ssim64x64_from_prover.cpp  h264_ssim64x64_from_prover.h  h264_ssim_from_prover.cpp  h264_ssim_from_prover.h  h264_ssim_original.cpp  h264_ssim_original.h  png.cpp  png.h  ssim.cpp  ssim.h  ssim_example.cpp
src/videocoin_proving_system/smart-contract/: Verifier.go  scgenerator.py  truffle.js  verify.py
src/videocoin_proving_system/smart-contract/contracts/: Verifier.sol
src/videocoin_proving_system/smart-contract/template/: Verifier.sol
src/videocoin_proving_system/smart-contract/test/: DemoTestVerifier.js  TestVerifier.js
src/videocoin_proving_system/storage/: configurable_block_store.cpp  configurable_block_store.h  cql.h  db.h  db_block_store.cpp  db_block_store.h  db_shared.h  db_util.cpp  db_util.h  exo.cpp  exo.h  external_sort.cpp  external_sort.h  ggh_hash.cpp  ggh_hash.h  hash_block_store.h  hasher.cpp  hasher.h  kyoto_block_store.cpp  kyoto_block_store.h  leveldb_block_store.cpp  leveldb_block_store.h  merkle_ram.h  null_hash.cpp  null_hash.h  ram_impl.cpp  ram_impl.h  storage.h  synchronized_queue.h
src/videocoin_proving_system/verifier/: main.cpp
src/vn-tiny-ram/libsnark/: CMakeLists.txt
src/vn-tiny-ram/libsnark/depends/libff/: CMakeLists.txt
src/vn-tiny-ram/libsnark/depends/libff/libff/common/: utils.cpp  utils.hpp
src/vn-tiny-ram/libsnark/libsnark/: CMakeLists.txt
src/vn-tiny-ram/libsnark/libsnark/gadgetlib1/gadgets/cpu_checkers/tinyram/: tinyram_cpu_checker.tcc
src/vn-tiny-ram/libsnark/libsnark/relations/ram_computations/rams/examples/: ram_examples.tcc
src/vn-tiny-ram/libsnark/libsnark/relations/ram_computations/rams/tinyram/: tinyram_aux.cpp  tinyram_aux.hpp
src/vn-tiny-ram/libsnark/libsnark/zk_proof_systems/ppzksnark/ram_ppzksnark/examples/: demo_ram_ppzksnark.cpp
src/vn-tiny-ram/libsnark/libsnark/zk_proof_systems/ppzksnark/ram_ppzksnark/tests/: test_ram_ppzksnark_experiments.cpp
src/zokrates/: zktrans.code
(+2 files in other folders)
